# snake-raylib

./: CMakeLists.txt  LICENSE  README.md  apple.c  apple.h  main.c  main.h  menu.c  menu.h  snake.c  snake.h  utils.c  utils.h  utils_snake.c  utils_snake.h
resources/: icon.xcf
